--- a/content/post/2018-01-03-consumed-in-2017.md
+++ b/content/post/2018-01-03-consumed-in-2017.md
@@ -3,27 +3,17 @@ title = "Consumed in 2017"
 slug = "2018-01-03-consumed-in-2017"
 published = 2018-01-03T21:28:00.002000+01:00
 author = "Jef Claes"
-tags = [ "Bookreview",]
+tags = [ "consumed",]
+url = "2018/01/consumed-in-2017.html"
 +++
 Another year, another 17 books, 6 shows and 3 movies consumed. Here's
 this year's highlights.
 
-  
-
 [![](/post/images/thumbnails/2018-01-03-consumed-in-2017-consumed.PNG)](/post/images/2018-01-03-consumed-in-2017-consumed.PNG)
 
-**  
-**
+## Books
 
-### **Books**
-
-**  
-**
-
-**1. The Zen and Art of Motor Cycle Maintenance**
-
-**  
-**
+### The Zen and Art of Motor Cycle Maintenance
 
 The author is a tormented soul on a quest to define quality. You're his
 passenger, driving shot gun on a CB77 Super Hawk, in for an exhausting
@@ -51,10 +41,8 @@ on you, and you'll be more appreciative of the road that took you there.
 
 [Amazon](https://www.amazon.com/gp/product/0060589469/ref=as_li_qf_sp_asin_il_tl?ie=UTF8&tag=diofanedebyje-20&camp=1789&creative=9325&linkCode=as2&creativeASIN=0060589469&linkId=38a657fd4701b9259f0dd3e486d51045)  
   
+### The Soul of a New Machine
 
-**2. The Soul of a New Machine**
-
-  
 The type of writing I wish there was more of. It's the closest I'll ever
 get to experience building a mini-computer. It makes one appreciate how
 much we're standing on the shoulders of giants. So much has changed in
@@ -79,10 +67,9 @@ much we're standing on the shoulders of giants. So much has changed in
 
 [Amazon](https://www.amazon.com/gp/product/0316491977/ref=as_li_qf_sp_asin_il_tl?ie=UTF8&tag=diofanedebyje-20&camp=1789&creative=9325&linkCode=as2&creativeASIN=0316491977&linkId=a467823d00576c3c9683dcf515188781)  
   
-**3. Winter is Coming: Why Vladimir Putin and the Enemies of the Free
-World Must Be Stopped**  
-**  
-**I've been trying to get better educated on the history of world
+### Winter is Coming: Why Vladimir Putin and the Enemies of the Free World Must Be Stopped  
+
+I've been trying to get better educated on the history of world
 politics and long-lasting international conflicts. Growing up in Western
 Europe with very little direct conflict, you're never really taught why
 other parts of the world seem to be so messed up and why they're so
@@ -120,13 +107,11 @@ more than once.
 
 [Amazon](https://www.amazon.com/gp/product/1610397193/ref=as_li_qf_sp_asin_il_tl?ie=UTF8&tag=diofanedebyje-20&camp=1789&creative=9325&linkCode=as2&creativeASIN=1610397193&linkId=8cfe9da4e80d07c4aa706a1934842b7e)  
   
+## Shows
 
-### **Shows** 
+### Westworld
 
-  
-**1. Westworld**  
-**  
-**In a not so distant future, the rich will be spending their free time
+In a not so distant future, the rich will be spending their free time
 visiting amusement parks inhabited by lifelike robots. Once you pay your
 entry ticket, you can be the protagonist of any story you want. Maybe
 you want good value for money and go on an epic quest chasing a bad guy
@@ -144,60 +129,49 @@ This show made me question if I understood what it is that makes us
 human. Aren't we all just the result of our pre-programmed genetics and
 the events we experience throughout our lives?  
   
-
 [![](/post/images/thumbnails/2018-01-03-consumed-in-2017-ww.jpg)](/post/images/2018-01-03-consumed-in-2017-ww.jpg)
-
-  
   
 [IMDB](http://www.imdb.com/title/tt0475784/?ref_=nv_sr_1)  
   
-**2. Stranger Things 2**  
-**  
-**I just finished watching this one last night. It's like reading a
+### Stranger Things 2  
+ 
+I just finished watching this one last night. It's like reading a
 really good Stephen King novel, but in color. I noticed yesterday's
 season finale was 61 minutes long; good things do happen when you're not
 constrained to TV time.  
   
-
 [![](/post/images/thumbnails/2018-01-03-consumed-in-2017-st.jpg)](/post/images/2018-01-03-consumed-in-2017-st.jpg)
 
-  
-  
 [Netflix](https://www.netflix.com/be/title/80057281)  
   
+## Podcasts
 
-### **Podcasts**
-
-  
 Commutes have gotten earlier and longer this year. I've cut back on the
 technology podcasts in favor of a more broad range of topics.  
   
-**1. The Joe Rogan Experience**  
-**  
-**It's a bit like sitting in on a conversation between two people at a
+### The Joe Rogan Experience
+ 
+It's a bit like sitting in on a conversation between two people at a
 bar. One person is a talkative and enjoyable guy, not afraid to ask
 questions and the other is happy to drop knowledge on a specific (and
 often fringe) topic. Topics range from diet and fitness, to economy and
 politics. Some episodes that stood out for me recently are the ones with
 [Colin Moriarty](http://podcasts.joerogan.net/podcasts/colin-moriarty-3)
 and [Nina
-Teicholz](http://podcasts.joerogan.net/podcasts/nina-teicholz).  
-  
-**2. Conversations with Tyler**  
-**  
-**The same concept, being a one-on-one conversation covering a wide
+Teicholz](http://podcasts.joerogan.net/podcasts/nina-teicholz).
+
+### Conversations with Tyler
+
+The same concept, being a one-on-one conversation covering a wide
 range of topics. However, this one is more formal and often a bit (too?)
 academic. This podcast on [Marcroeconomics, Mentorship and Avoiding
 Complacency](https://medium.com/conversations-with-tyler/tyler-cowen-larry-summers-blog-secular-stagnation-twitter-421a69ed84c8)
 might give you a good idea on what to expect.  
   
-**3. Dan Carlin's History X**  
-**  
-**Extremely thoroughly researched lectures on important periods of our
+### Dan Carlin's History X  
+  
+Extremely thoroughly researched lectures on important periods of our
 history. [The Destroyer of
 Worlds](http://www.dancarlin.com/hardcore-history-59-the-destroyer-of-worlds/)
 is a 6 hour long, but captivating piece on the history of nuclear
-warfare and filled in a lot of gaps for me.  
-  
-  
-Not sure what to watch next. Any recommendations?
+warfare and filled in a lot of gaps for me.
