--- a/content/post/2016-12-27-consumed-in-2016.md
+++ b/content/post/2016-12-27-consumed-in-2016.md
@@ -3,17 +3,15 @@ title = "Consumed in 2016"
 slug = "2016-12-27-consumed-in-2016"
 published = 2016-12-27T22:10:00+01:00
 author = "Jef Claes"
-tags = [ "General",]
+tags = [ "consumed",]
+url = "2016/12/consumed-in-2016.html"
 +++
 I'm keeping the tradition alive, sharing how much I've consumed over the
 last year highlighting the things that stood out. 18 books, 8 movies and
 9 shows. Looks like I consumed more than other years, which probably
 also explains why I produced less after-hours.  
-
-[](https://2.bp.blogspot.com/-Dy-mEGhkkrY/WF-x1lN-H2I/AAAAAAAAQRU/Bt2-mKFDqpsuP7udf0TL2T-ZjMmPJYLrQCLcB/s1600/Consumed2016.png)[![](/post/images/thumbnails/2016-12-27-consumed-in-2016-Consumed2016.png)](/post/images/2016-12-27-consumed-in-2016-Consumed2016.png)
-
   
-**Books**  
+### Books  
   
 I finished [the Dark Tower
 series](https://www.amazon.com/gp/product/B01N49DY6V/ref=as_li_tl?ie=UTF8&camp=1789&creative=9325&creativeASIN=B01N49DY6V&linkCode=as2&tag=diofanedebyje-20&linkId=1adc667326be5a331e60a6dd5887c04d)
@@ -79,9 +77,9 @@ infrastructure landscape has changed over the years. Knowing where we're
 coming from deploying and running large systems helps me understand why
 we're doing things in a certain way today.  
   
-**Movies**  
-**  
-**[The Revenant](http://www.imdb.com/title/tt1663202/?ref_=fn_al_tt_1).
+### Movies 
+  
+[The Revenant](http://www.imdb.com/title/tt1663202/?ref_=fn_al_tt_1).
 If you're looking for a rich storyline, you might end up disappointed.
 However, it's the high quality cinematography and breathtaking scenery
 that make this film. I'm a sucker for the romance of the American
@@ -109,22 +107,18 @@ the people in power toying with our privacy are the outcasts.
 > have to worry about what happens tomorrow, because I'm happy with what
 > I've done today. - Edward Snowden
 
-**Shows**  
-**  
-**I got around to watching the first episode of Westworld yesterday, and
+### Shows  
+
+I got around to watching the first episode of Westworld yesterday, and
 my expectations are sky-high. Friends have been hyping me up over this
 show since the first episode.  
   
-Earlier in the year, I watched
-[Narcos](http://www.imdb.com/title/tt2707408/?ref_=fn_al_tt_1) and
-[Stranger Things](http://www.imdb.com/title/tt4574334/?ref_=nv_sr_1).
-Netflix focussing more on content creation instead of rapidly expanding
-their portfolio with third party content might pay off big time. Both
+Earlier in the year, I watched [Narcos](http://www.imdb.com/title/tt2707408/?ref_=fn_al_tt_1) and [Stranger Things](http://www.imdb.com/title/tt4574334/?ref_=nv_sr_1). Netflix focussing more on content creation instead of rapidly expanding their portfolio with third party content might pay off big time. Both
 shows bring high quality, bingeable content.  
-**  
-Podcasts**  
-**  
-**[This American Life](https://www.thisamericanlife.org/) has been a
+  
+### Podcasts  
+  
+[This American Life](https://www.thisamericanlife.org/) has been a
 favorite of mine for a long time. The Monday morning commute almost
 becomes enjoyable. Almost.  
   
