--- a/content/post/2015-01-11-consumed-in-2014.md
+++ b/content/post/2015-01-11-consumed-in-2014.md
@@ -3,7 +3,8 @@ title = "Consumed in 2014"
 slug = "2015-01-11-consumed-in-2014"
 published = 2015-01-11T17:45:00+01:00
 author = "Jef Claes"
-tags = []
+tags = ["consumed"]
+url = "/2015/01/consumed-in-2014.html"
 +++
 Starting 2014, I wanted to look more closely at everything I consume. So
 I started keeping a list of everything I read, watch and listen to.  
@@ -21,109 +22,38 @@ watched 12 movies and 13 shows.
 I just went over the list and cherry picked three items per category
 that stuck with me the most.  
   
-**Books**  
+### Books
 
-1.  [Addiction by
-    Design](http://www.amazon.com/gp/product/0691160880/ref=as_li_tl?ie=UTF8&camp=1789&creative=9325&creativeASIN=0691160880&linkCode=as2&tag=diofanedebyje-20&linkId=VOHHIGAAZRBYS4CW):
-    An incredibly complete overview of the gambling industry, with
-    insights into the human psyche which apply far outside the domain of
-    gambling. 
-2.  [11/22/63](http://www.amazon.com/gp/product/1451627297/ref=as_li_tl?ie=UTF8&camp=1789&creative=9325&creativeASIN=1451627297&linkCode=as2&tag=diofanedebyje-20&linkId=PWN25BXIZGUYENQL):
-    I try to read a fiction book for every non-fiction book I read. This
-    was my first "real" King book, and I was hooked instantly. I
-    devoured the 880 pages thick book in less than two weeks, and was
-    left with a big gaping hole in my heart - the journey was more than
-    worth it. 
-3.  [SQL Performance
-    Explained](http://www.amazon.com/gp/product/3950307826/ref=as_li_tl?ie=UTF8&camp=1789&creative=9325&creativeASIN=3950307826&linkCode=as2&tag=diofanedebyje-20&linkId=PLZSBRRPM2O3LYTA):
-    The author succeeds in capturing the essentials in only 204 pages.
-    This is one of those books you want to have going around at the
-    office. 
+1. [Addiction by Design](http://www.amazon.com/gp/product/0691160880/ref=as_li_tl?ie=UTF8&camp=1789&creative=9325&creativeASIN=0691160880&linkCode=as2&tag=diofanedebyje-20&linkId=VOHHIGAAZRBYS4CW): An incredibly complete overview of the gambling industry, with insights into the human psyche which apply far outside the domain of gambling. 
+2. [11/22/63](http://www.amazon.com/gp/product/1451627297/ref=as_li_tl?ie=UTF8&camp=1789&creative=9325&creativeASIN=1451627297&linkCode=as2&tag=diofanedebyje-20&linkId=PWN25BXIZGUYENQL): I try to read a fiction book for every non-fiction book I read. This was my first "real" King book, and I was hooked instantly. I devoured the 880 pages thick book in less than two weeks, and was left with a big gaping hole in my heart - the journey was more than worth it. 
+3. [SQL Performance Explained](http://www.amazon.com/gp/product/3950307826/ref=as_li_tl?ie=UTF8&camp=1789&creative=9325&creativeASIN=3950307826&linkCode=as2&tag=diofanedebyje-20&linkId=PLZSBRRPM2O3LYTA): The author succeeds in capturing the essentials in only 204 pages. This is one of those books you want to have going around at the office. 
 
-**Movies**
+### Movies
 
-1.  [Be Here To Love
-    Me](http://www.imdb.com/title/tt0423853/?ref_=fn_al_tt_1):
-    Not-your-average documentary about Townes van Zandt; my musical and
-    philosophical discovery of 2014. A troubled soul, struggling with
-    the futility of existence. Simple poetic songs beautifully crafted,
-    capturing in a few words what would take others books. While
-    darkness inspired his best work, it was also the search for relief
-    of that same darkness that led him further down the path of
-    self-destructive behaviour. Painful to
-    watch. [Rake](https://www.youtube.com/watch?v=UPxz_4wIa4g), [Waiting
-    around to die](http://youtu.be/kFh4DebJAfs?t=1m30s), [Snake Mountain
-    Blues](https://www.youtube.com/watch?v=V825I5waU3g), [Dollar Bill
-    Blues](https://www.youtube.com/watch?v=EaqKdl_T3ak).
-2.  [3-10 to
-    Yuma](http://www.imdb.com/title/tt0381849/?ref_=fn_al_tt_1): A true
-    modern Western, capturing the American West beautifully, [making me
-    nostalgic](http://www.jefclaes.be/2011/09/once-upon-time-in-west.html).
-3.  [Dallas Buyers
-    Club](http://www.imdb.com/title/tt0790636/?ref_=fn_al_tt_1): Is
-    there one role Matthew McConaughey can't hack?
+1. [Be Here To Love Me](http://www.imdb.com/title/tt0423853/?ref_=fn_al_tt_1): Not-your-average documentary about Townes van Zandt; my musical and philosophical discovery of 2014. A troubled soul, struggling with the futility of existence. Simple poetic songs beautifully crafted, capturing in a few words what would take others books. While darkness inspired his best work, it was also the search for relief of that same darkness that led him further down the path of self-destructive behaviour. Painful to watch. [Rake](https://www.youtube.com/watch?v=UPxz_4wIa4g), [Waiting around to die](http://youtu.be/kFh4DebJAfs?t=1m30s), [Snake Mountain Blues](https://www.youtube.com/watch?v=V825I5waU3g), [Dollar Bill Blues](https://www.youtube.com/watch?v=EaqKdl_T3ak).
+2. [3-10 to Yuma](http://www.imdb.com/title/tt0381849/?ref_=fn_al_tt_1): A true modern Western, capturing the American West beautifully, [making me nostalgic](http://www.jefclaes.be/2011/09/once-upon-time-in-west.html).
+3. [Dallas Buyers Club](http://www.imdb.com/title/tt0790636/?ref_=fn_al_tt_1): Is there one role Matthew McConaughey can't hack?
 
 [![](/post/images/thumbnails/2015-01-11-consumed-in-2014-Townes.jpg)](/post/images/2015-01-11-consumed-in-2014-Townes.jpg)
 
-  
+### Audio books
 
-  
+1. [On Writing - A Memoir of the Craft](http://www.audible.com/pd/Bios-Memoirs/On-Writing-Audiobook/B002V1A0WE/ref=a_search_c4_1_1_srTtl?qid=1420974710&sr=1-1): "What follows is an attempt to put down, briefly and simply, how I came to the craft (of telling stories on paper), what I know about it now, and how it's done. It's about the day job; it's about the language." If you're not a King fan, you will be after finishing this one. 
+2. [Getting to Yes](http://www.audible.com/pd/Business/Getting-to-Yes-Audiobook/B004X1T8G4/ref=a_search_c4_1_1_srTtl?qid=1420974726&sr=1-1): Separate people and issues, focus on interest, generate options and use objective criteria. But also, what to do when the other party is more powerful or when they use dirty tricks.
+3. [Blink](http://www.audible.com/pd/Science-Technology/Blink-Audiobook/B002VAEK3K/ref=a_search_c4_1_1_srTtl?qid=1420974744&sr=1-1): Making decisions in the blink of an eye; why you should go with instinct and why you shouldn't.
 
-  
+### Shows
 
-**Audio books**
-
-1.  [On Writing - A Memoir of the
-    Craft](http://www.audible.com/pd/Bios-Memoirs/On-Writing-Audiobook/B002V1A0WE/ref=a_search_c4_1_1_srTtl?qid=1420974710&sr=1-1):
-    "What follows is an attempt to put down, briefly and simply, how I
-    came to the craft (of telling stories on paper), what I know about
-    it now, and how it's done. It's about the day job; it's about the
-    language." If you're not a King fan, you will be after finishing
-    this one. 
-2.  [Getting to
-    Yes](http://www.audible.com/pd/Business/Getting-to-Yes-Audiobook/B004X1T8G4/ref=a_search_c4_1_1_srTtl?qid=1420974726&sr=1-1):
-    Separate people and issues, focus on interest, generate options and
-    use objective criteria. But also, what to do when the other party is
-    more powerful or when they use dirty tricks.
-3.  [Blink](http://www.audible.com/pd/Science-Technology/Blink-Audiobook/B002VAEK3K/ref=a_search_c4_1_1_srTtl?qid=1420974744&sr=1-1):
-    Making decisions in the blink of an eye; why you should go with
-    instinct and why you shouldn't.
-
-**Shows**
-
-1.  [True
-    Detective](http://www.imdb.com/title/tt2356777/?ref_=fn_al_tt_1):
-    "Life's barely long enough to get good at one thing. So be careful
-    what you get good at." "If the only thing keeping a person decent is
-    the expectation of divine reward then, brother, that person is a
-    piece of shit." "People incapable of guilt usually do have a good
-    time." Heavy stuff.
-2.  [Rick and
-    Morty](http://www.imdb.com/title/tt2861424/?ref_=fn_al_tt_1):
-    "Listen, Morty, I hate to break it to you but what people call love
-    is just a chemical reaction that compels animals to breed." "Nobody
-    exists on purpose. Nobody belongs anywhere. Everybody's gonna die.
-    Come watch TV? "Snuffles was my slave name, you can call me snowball
-    because my fur is white and pretty." Must be the best animated
-    series of the moment hands down, looking forward to next season. The
-    first season is [available for
-    free](https://www.youtube.com/channel/UCmPIe8rQUYlI7bQp2ONfxvg).
-3.  [The Walking
-    Dead](http://www.imdb.com/title/tt1520211/?ref_=fn_al_tt_1):
-    Addictive soap opera that features zombies.
+1. [True Detective](http://www.imdb.com/title/tt2356777/?ref_=fn_al_tt_1): "Life's barely long enough to get good at one thing. So be careful what you get good at." "If the only thing keeping a person decent is the expectation of divine reward then, brother, that person is a piece of shit." "People incapable of guilt usually do have a good time." Heavy stuff.
+2. [Rick and Morty](http://www.imdb.com/title/tt2861424/?ref_=fn_al_tt_1: "Listen, Morty, I hate to break it to you but what people call love is just a chemical reaction that compels animals to breed." "Nobody exists on purpose. Nobody belongs anywhere. Everybody's gonna die. Come watch TV? "Snuffles was my slave name, you can call me snowball because my fur is white and pretty." Must be the best animated series of the moment hands down, looking forward to next season. The first season is [available for free](https://www.youtube.com/channel/UCmPIe8rQUYlI7bQp2ONfxvg).
+3. [The Walking Dead](http://www.imdb.com/title/tt1520211/?ref_=fn_al_tt_1): Addictive soap opera that features zombies.
 
 [![](/post/images/thumbnails/2015-01-11-consumed-in-2014-TrueDetective.jpg)](/post/images/2015-01-11-consumed-in-2014-TrueDetective.jpg)
 
-  
-
-**Papers**
-
-  
+### Papers
 
 Mostly classics on Functional Programming.
 
-1.  [Out of the tarpit](http://shaffner.us/cs/papers/tarpit.pdf)
-2.  [Program Development using
-    Erlang](http://www.erlang.se/doc/programming_rules.shtml)
-3.  [OOP is an expensive disaster which must
-    end](http://www.smashcompany.com/technology/object-oriented-programming-is-an-expensive-disaster-which-must-end)
+1. [Out of the tarpit](http://shaffner.us/cs/papers/tarpit.pdf)
+2. [Program Development using Erlang](http://www.erlang.se/doc/programming_rules.shtml)
+3. [OOP is an expensive disaster which must end](http://www.smashcompany.com/technology/object-oriented-programming-is-an-expensive-disaster-which-must-end)
