--- a/content/post/2012-12-31-2012-annual-review.md
+++ b/content/post/2012-12-31-2012-annual-review.md
@@ -3,7 +3,8 @@ title = "2012 Annual Review"
 slug = "2012-12-31-2012-annual-review"
 published = 2012-12-31T15:58:00.001000+01:00
 author = "Jef Claes"
-tags = [ "Ramblings", "General",]
+tags = [ "opinion" ]
+url = "2012/12/2012-annual-review.html"
 +++
 It's that time of the year again where I take some time to look back on
 the year passed and peek at the year ahead. This is mostly a post I like
@@ -14,18 +15,18 @@ place, and my girlfriend's decision to study medicine after graduating
 as a Master of Arts earlier this year. I had no idea how things would
 turn out once we lived together, but so far we have been doing great.  
   
-**My career**  
-**  
-**September marked one year working for
+### My career  
+  
+September marked one year working for
 [Euricom](http://www.linkedin.com/company/euricom?trk=hb_tab_compy_id_30393/).
 I'm still at my first client, and while I definitely regularly have my
 share of the enterprise blues, I also learned a lot working on several
 projects: from maintaining legacy to leading green fields. Fairly, I
 often doubt if traditional enterprise life is *it* for me though.  
   
-**Blog**  
-**  
-**I published 66 posts this year, which seems to be consistent with
+### Blog  
+  
+I published 66 posts this year, which seems to be consistent with
 previous years.  
   
 While writing has turned into a habit over the years, I often struggle
@@ -47,13 +48,12 @@ Page views have more than doubled (173k) compared to 2011, which I'm
 humbled by, but I seem to care less about that than a little while ago.
 It had even been over a month since I logged into Google Analytics.  
   
-
 [![](/post/images/thumbnails/2012-12-31-2012-annual-review-traffic.PNG)](/post/images/2012-12-31-2012-annual-review-traffic.PNG)
 
   
-**Community**  
-**  
-**It very much depends on what I'm doing that day, but I still spend
+### Community  
+  
+It very much depends on what I'm doing that day, but I still spend
 quite some time on [Twitter](http://twitter.com/JefClaes). I often blurt
 out thoughts on software, and regularly, someone who knows better than
 me replies, and challenges my looks on software. That's how I get value
@@ -61,9 +61,7 @@ out of Twitter. That, and animated GIFs of course.
   
 In real life, I went to see a few interesting speakers at local user
 groups, and [gave a talk myself at Web.NET Europe
-Milan](http://www.jefclaes.be/2012/10/slides-and-code-from-my-webnet-europe.html)
-- international speaker, wooh. I want to applaud the organization of
-Web.NET Europe once more; [they did a great
+Milan](http://www.jefclaes.be/2012/10/slides-and-code-from-my-webnet-europe.html) - international speaker, wooh. I want to applaud the organization of Web.NET Europe once more; [they did a great
 job](http://www.jefclaes.be/2012/10/post-webnet-europe.html).  
   
 In general, I started to value artificial sponsored user groups less.
@@ -71,14 +69,13 @@ They have their place, and they do add value, but it's not something
 that I feel I need to be a part of. Having some beers with a few
 likeminded developers suits me better.  
   
-**Travelling**  
-**  
-**Buying an apartment and all of that, we didn't get to make any epic
+### Travelling  
+  
+Buying an apartment and all of that, we didn't get to make any epic
 travels this year. I got to visit three different countries though:
 [Italy](http://www.jefclaes.be/2012/07/finito.html),
 [Tunisia](http://www.jefclaes.be/2012/09/slides-and-code-from-my-tunisia-rest.html),
-[Italy
-again](http://www.jefclaes.be/2012/10/slides-and-code-from-my-webnet-europe.html),
+[Italy again](http://www.jefclaes.be/2012/10/slides-and-code-from-my-webnet-europe.html),
 and [France](http://www.jefclaes.be/2012/10/cote-dopale.html). Two out
 of four were sponsored by my job; not bad.  
   
@@ -89,9 +86,9 @@ we've been researching the South-West again - but closer to the Mexican
 border this time. Other destinations are still open for discussion
 though.  
   
-**Projects**  
-**  
-**I spent a considerate part of 2012 [building small things on the
+### Projects  
+  
+I spent a considerate part of 2012 [building small things on the
 side](http://www.jefclaes.be/2011/09/building-small-things.html). This
 didn't result in anything useful, but most importantly, it got me in the
 habit of working on my own things, and I put together a toolset which
@@ -123,14 +120,7 @@ pages](http://kristienbehets.be/) though.
 project](http://www.jefclaes.be/2012/11/released-kill-long-meetings.html):
 Kill Long Meetings. This one is still around, but quickly floundered
 into forgetfulness after its five minutes of Twitter fame.  
-  
-The last two things I worked on this year were my Antwerp Open Data
-submissions. I jotted down some technical details
-[here](http://www.jefclaes.be/2012/12/released-my-antwerp-open-data.html).
-[The Nancy.AspNetSprites.Razor
-package](http://www.jefclaes.be/2012/11/released-nancyaspnetspritesrazor.html)
-also sprouted out of that effort (almost 100 downloads!).  
-  
+    
 Now that I look back at it, I did write quite some code after my hours
 this year... Next to being in the moment of building and shipping stuff,
 I genuinely believe it makes me better at my job.  
@@ -139,9 +129,9 @@ I hope to be able to do as much in 2013, but to also let it be something
 worthwhile. I'll be actually already shipping something new in a few
 weeks if all goes well.  
   
-**Sport/Health**  
-**  
-**The biggest gift I gave myself health wise this year, was giving up on
+### Sport/Health 
+  
+The biggest gift I gave myself health wise this year, was giving up on
 smoking; I lit my last one over six months ago!  
   
 Moving to Antwerp, and not having any area to put my weights, I've
@@ -153,20 +143,18 @@ I haven't given up on running - living close to the city park helps. I
 just missed the 1000km (or 621 miles) milestone this year, which is kind
 of lame, but I'm far from complaining.  
   
-
 [![](/post/images/thumbnails/2012-12-31-2012-annual-review-nikerunning.PNG)](/post/images/2012-12-31-2012-annual-review-nikerunning.PNG)
 
-  
 I don't know what I hope for in this area in 2013. It's starting to dawn
 on me that, even though those goals I set for myself have pushed me
 further than I thought I was capable of - I couldn't jog 1km without a
 break three years ago, they are not that important. It eventually comes
 down to nourishing your body, and making use of it in every way possible
-while you still can.  
+while you can.  
   
-**Conclusion**  
-**  
-**Earlier this week, I strolled down the main street of Brussels and
+### Conclusion
+ 
+Earlier this week, I strolled down the main street of Brussels and
 crossed a beggar with one leg and no arms. Next to feeling extremely
 sorry for that man, I felt truly blessed; I'm healthy, loved, have more
 than I need, and I get to do what I like for a living. I need to remind
