--- a/content/post/2011-12-26-2011-annual-review.md
+++ b/content/post/2011-12-26-2011-annual-review.md
@@ -3,7 +3,8 @@ title = "2011 Annual Review"
 slug = "2011-12-26-2011-annual-review"
 published = 2011-12-26T21:35:00+01:00
 author = "Jef Claes"
-tags = [ "General",]
+tags = [ "opinion",]
+url = "2011/12/2011-annual-review.html"
 +++
 Since the end of the year is approaching, I would like to look back on
 2011 and take a peek at 2012. Unlike the years before, I'm hardly
@@ -11,31 +12,30 @@ setting any goals this year. Interests change so quickly, and new
 opportunities present themselves so regularly, I feel like it might be
 ignorant to set these things in stone.  
   
-**My career**  
+### My career  
   
 The year started out interesting, working on a brand new product for
 fire departments at Ferranti Computer Systems. Although my role in this
 project should have been fairly satisfying, I still felt like my
 position back then failed to fill a certain void. That's why I decided
 to take the leap into [the Great
-Unknown](http://jclaes.blogspot.com/2011/08/high-hopes.html).  
+Unknown](https://www.jefclaes.be/2011/08/high-hopes.html).  
   
 In September, I started working for [Euricom](http://www.euri.com/) as a
 consultant. So far, I haven't regretted making that decision at all, I
 ended up in a group of intelligent, progressive and enjoyable people.  
   
-**Blog**  
+### Blog  
   
 This year I managed to write 69 posts (70 including this one), which is
 a bit more than the year before.  
   
 Plenty of posts have gotten [decent
-attention](http://jclaes.blogspot.com/2011/12/2011s-most-read-posts.html)
+attention](https://www.jefclaes.be/2011/12/2011s-most-read-posts.html)
 this year, making the traffic tripple compared to 2010. And no matter
 how other bloggers claim you shouldn't care about your blog statistics,
 this does mean a bunch to me.  
   
-
 [![](/post/images/thumbnails/2011-12-26-2011-annual-review-BlogTraffic.PNG)](/post/images/2011-12-26-2011-annual-review-BlogTraffic.PNG)
 
 The main topics I wrote about this year were mostly web related (HTML5,
@@ -45,9 +45,9 @@ year, which I found harder, but also more rewarding.
 Last year, I set a goal to get better at MVC and to at least look at
 WebMatrix. I spent a large part of the year building things in ASP.NET
 MVC at the day job, so that goal was easily achieved. I built [one small
-thing](http://jclaes.blogspot.com/2011/09/real-developer-knows-when-to-pull-plug.html)
+thing](https://www.jefclaes.be/2011/09/real-developer-knows-when-to-pull-plug.html)
 in
-[WebMatrix](http://jclaes.blogspot.com/2011/05/my-thoughts-on-webmatrix.html),
+[WebMatrix](https://www.jefclaes.be/2011/05/my-thoughts-on-webmatrix.html),
 which was enough to give me a feel of what WebMatrix is all about.  
   
 My guess is that I will cover similar topics next year. My faith in the
@@ -56,13 +56,13 @@ and JavaScript provides us with unseen opportunities, but also with an
 enormous amount of challenges. I am really eager to start looking more
 into *serious* JavaScript development.  
   
-**Community**  
+### Community 
   
 I think I did fairly well this year. I attended several local community
 meetings and got to to know a lot of nice people in the process.  
   
 The highlight probably was [my own talk on WebSockets at HTML5
-Webcamps](http://jclaes.blogspot.com/2011/04/video-slides-and-source-from-my.html).
+Webcamps](https://www.jefclaes.be/2011/04/video-slides-and-source-from-my.html).
 I really enjoyed that experience. I do not aspire to be a speaker
 though, but should I have interesting things to talk about, I probably
 won't reject invitations.  
@@ -72,22 +72,22 @@ often don't seem to get out of them what I hoped for. Also, Euricom
 regularly organizes meetups to talk about all things software
 development. These will already consume plenty of time.  
   
-**Travelling**  
+### Travelling
   
 This year my girlfriend and I did [a three-week roadtrip along the West
-Coast](http://jclaes.blogspot.com/2011/09/once-upon-time-in-west.html).
+Coast](http://www.jefclaes.be/2011/09/once-upon-time-in-west.html).
 This trip was by far the best time of our lives. We are determined to
 undertake similar projects in the future again.  
   
 Next to that, we revisited the Czech Republic, taking plenty of time to
 [visit
-Prague](http://jclaes.blogspot.com/2011/04/prague-impressions.html) this
+Prague](http://www.jefclaes.be/2011/04/prague-impressions.html) this
 time.  
   
 We're not sure what 2012 will bring. Right now, we are looking into
 something more nearby, Italy.  
   
-**Sport/Health**  
+### Sport/Health
   
 Last year I picked up boxing, but I had to give that up due to
 scheduling conflicts. I have been working a tweaked [P90X
@@ -103,15 +103,12 @@ higher paced) runs lately, increasing the intensity. Running is probably
 one of the sports that give me the most energy in return, so I intend to
 stay at it.  
   
-
 [![](/post/images/thumbnails/2011-12-26-2011-annual-review-nikeplus.PNG)](/post/images/2011-12-26-2011-annual-review-nikeplus.PNG)
 
-  
-**Conclusion**  
+### Conclusion
   
 2011 has been an eventful year for me. In 2012, I hope to be able to
 keep doing the things I love, surrounded by the people I love. Trying to
 live life as much as I can.  
   
-**I wish you and your family the best for 2012. That the new year may
-bring you health, love and plenty of hacking. **
+*I wish you and your family the best for 2012. That the new year may bring you health, love and plenty of hacking.*
